--- a/apps/demo/index.html
+++ b/apps/demo/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VIS Demo</title>
+    <style>
+      html,
+      body {
+        margin: 0;
+        height: 100%;
+        background: #050505;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
